--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.verifyotp.VerifyOtpActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.phoneauth.PhoneAuthActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/fullScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
