--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
     implementation 'com.google.firebase:firebase-messaging'
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
