--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -15,8 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ECommerce"
         tools:targetApi="31">
+        <activity android:name=".ui.main.MainActivity"
+            android:exported="false"
+            android:theme="@style/fullScreenActivity"/>
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true"
             android:theme="@style/fullScreenActivity">
             <intent-filter>
