--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -74,4 +80,9 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+
+    //SSLCommerz
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation (name: 'sslCommerzSdk', ext: 'aar')
 }
