--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,12 @@ dependencies {
 
     //SSLCommerz
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation 'androidx.core:core:1.0.0'
+//    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'com.android.support:support-v4:28.0.0'
+
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation (name: 'sslCommerzSdk', ext: 'aar')
 }
