--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,11 @@ repositories {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.core:core-ktx:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'androidx.core:core-ktx:1.9.0'
+//    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -82,13 +84,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
 
     //SSLCommerz
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'androidx.core:core:1.0.0'
-//    implementation 'androidx.appcompat:appcompat:1.0.0'
-//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-//    implementation 'com.android.support:appcompat-v7:28.0.0'
-//    implementation 'com.android.support:support-v4:28.0.0'
 
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation (name: 'sslCommerzSdk', ext: 'aar')
 }
